2005-10-08  Jim Meyering  <jim@meyering.net>

	* openat.c (rpl_openat): Use the promoted type (int), not mode_t,
	as second argument to va_arg.  Otherwise, some versions of gcc
	warn that `if this code is reached, the program will abort'.

	Update from gnulib.
	* getdelim.c: (SIZE_MAX): New macro, if not already defined.

2005-10-05  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcoreutils_a_DEPENDENCIES): Remove definition.
	Once it's gone, automake generates an equivalent one.
	Suggestion from Stepan Kasal.

	* getaddrinfo.h: Merge from gnulib.

2005-10-04  Jim Meyering  <jim@meyering.net>

	Merge from gnulib.
	* getaddrinfo.h: Include sys/types.h before other headers.

2005-10-02  Paul Eggert  <eggert@cs.ucla.edu>

	* getdelim.c: Import from gnulib (to fix unused var warnings) then
	apply the following fixes:
	Include getdelim.h first.  Include <limits.h>.
	(SSIZE_MAX): New macro, if not already defined.
	(getdelim): Fix buffer overrun on 64-bit hosts with lines longer
	than 2 GiB.

2005-10-01  Simon Josefsson  <jas@extundo.com>

	* getaddrinfo.h: Protect #include's of sys/socket.h and netdb.h.
	Only define struct addrinfo if !HAVE_STRUCT_ADDRINFO.  Protect
	AI_* and EAI_* definitions.  Protect function declarations.

2005-09-29  Paul Eggert  <eggert@cs.ucla.edu>

	* openat.c (fdopendir): Do not define if HAVE_FDOPENDIR.
	Remove AT_FDCWD test.
	Do not consume the fd unless successful.
	* openat.h (fdopendir): Do not define if HAVE_FDOPENDIR.

2005-09-29  Paul Eggert  <eggert@cs.ucla.edu>

	* xtime.h (XTIME_PRECISION): Now of type int, not long long int,
	so that the code works even with ancient cpp.  Portability problem
	with GCC 2.7.2.1 reported by Thomas M.Ott.

	* settime.c (settime): Fix { typo in previous patch.  Also, don't
	bother returning ENOSYS if settimeofday or stime fails; just let
	them return whatever errno they want to return.

2005-09-29  Jim Meyering  <jim@meyering.net>

	* settime.c (settime): Move the HAVE_STIME block `up' into an #elif